<resources>
    <string name="app_name">PracticeWS</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="utilities">Utilities</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>

    <string name="OpenDrawer">Open navigation Drawer</string>
    <string name="CloseDrawer">Close navigation Drawer</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="none_map">None Map</string>
    <string name="name">Name</string>
    <string name="username">userName</string>
    <string name="password">password</string>
    <string name="delete">Delete</string>
    <string name="insert">Insert</string>
    <string name="update">update</string>
    <string name="view">View</string>
    <string name="signup">SignUp</string>
    <string name="sensor_value">Sensor Value</string>
</resources>